# src/rust/oikos_api/models/mod.rs
@@ -206,6 +206,32 @@ pub mod components {
             pub step: String,
         }
 
+        #[derive(Clone, Debug, Deserialize, PartialEq, Serialize)]
+        pub struct ShoppingList {
+            #[serde(rename = "items")]
+            pub items: Vec<components::schemas::ShoppingListCategory>,
+        }
+
+        #[derive(Clone, Debug, Deserialize, PartialEq, Serialize)]
+        pub struct ShoppingListCategory {
+            #[serde(rename = "items")]
+            pub items: Vec<components::schemas::ShoppingListItem>,
+            #[serde(rename = "name")]
+            pub name: String,
+        }
+
+        #[derive(Clone, Debug, Deserialize, PartialEq, Serialize)]
+        pub struct ShoppingListItem {
+            #[serde(rename = "amount")]
+            pub amount: String,
+            #[serde(rename = "icon")]
+            pub icon: String,
+            #[serde(rename = "ingredient")]
+            pub ingredient: String,
+            #[serde(rename = "unit")]
+            pub unit: String,
+        }
+
         #[derive(Clone, Copy, Debug, Deserialize, PartialEq, Eq, Serialize)]
         pub enum TempUnit {
             #[serde(rename = "C")]
@@ -1078,4 +1104,92 @@ pub mod delete_recipe_by_id {
     pub type Status403 = components::schemas::Forbidden;
     /// Not Found
     pub type Status404 = components::schemas::Notfound;
+}
+
+pub mod get_shopping_list {
+    use super::components;
+    #[cfg(feature = "server")]
+    use actix_web::error::ErrorBadRequest;
+    #[cfg(feature = "server")]
+    use actix_web::{dev, FromRequest, HttpRequest};
+    #[cfg(feature = "server")]
+    use futures::future::{err, ok, Ready};
+    use serde::{Deserialize, Serialize};
+
+    /// Parameters for get_shopping_list operation
+    #[derive(Deserialize, Debug)]
+    pub struct Parameters {
+        pub authorization: String,
+    }
+
+    impl Parameters {
+        pub fn new(header: Header) -> Self {
+            Self {
+                authorization: header.authorization,
+            }
+        }
+
+        pub fn header(&self) -> Header {
+            Header {
+                authorization: self.authorization.clone(),
+            }
+        }
+    }
+    /// Header parameters for get_shopping_list operation
+    #[derive(Deserialize, Serialize)]
+    pub struct Header {
+        pub authorization: String,
+    }
+
+    #[cfg(feature = "server")]
+    impl FromRequest for Header {
+        type Error = actix_web::Error;
+        type Future = Ready<Result<Self, Self::Error>>;
+        type Config = ();
+
+        fn from_request(req: &HttpRequest, _: &mut dev::Payload) -> Self::Future {
+            let headers = req.headers();
+            ok(Self {
+                authorization: match headers.get("authorization") {
+                    Some(value) => match value.to_str() {
+                        Ok(value) => value.to_string(),
+                        Err(_) => return err(ErrorBadRequest("authorization should be a string")),
+                    },
+                    None => return err(ErrorBadRequest("missing authorization in header")),
+                },
+            })
+        }
+    }
+
+    #[derive(Debug)]
+    pub enum Response<T> {
+        Response200(Response200),
+        Unspecified(T),
+    }
+
+    /// OK
+    pub type Response200 = components::schemas::ShoppingList;
+
+    #[derive(Debug)]
+    pub enum Success {
+        Status200(Status200),
+    }
+
+    #[derive(Debug)]
+    pub enum Error<T: std::fmt::Debug> {
+        Unknown(T),
+    }
+
+    impl<T: std::fmt::Debug + std::fmt::Display> std::fmt::Display for Error<T> {
+        fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
+            match self {
+                Self::Unknown(response) => write!(f, "Unspecified response: `{}`", response),
+            }
+        }
+    }
+
+    impl<T: std::fmt::Debug + std::fmt::Display> std::error::Error for Error<T> {}
+
+    /// OK
+    pub type Status200 = components::schemas::ShoppingList;
 }
