# src/rust/oikos_web/src/services/meal_plans_service.rs
@@ -1,12 +1,14 @@
 use super::Error;
 use super::{request::Request, Requests};
 use crate::data::MealPlans;
+use oikos_api::components::schemas::ShoppingList;
 use yew::callback::Callback;
 
 #[derive(Default, Debug)]
 pub struct MealPlansService {
     requests: Requests,
     pub get_meal_plans: Request,
+    pub get_shopping_list: Request,
     pub update_meal_plans: Request,
 }
 
@@ -15,8 +17,16 @@ impl MealPlansService {
         Self {
             requests: Requests::new(),
             get_meal_plans: Request::new(),
+            get_shopping_list: Request::new(),
             update_meal_plans: Request::new(),
         }
+    }
+
+    pub fn get_shopping_list(&mut self, callback: Callback<Result<ShoppingList, Error>>) {
+        self.get_shopping_list.request(
+            self.requests
+                .get::<ShoppingList>("/api/shopping_list".to_string(), callback),
+        )
     }
 
     pub fn get_meal_plans(&mut self, callback: Callback<Result<MealPlans, Error>>) {
